--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 7s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-7
+    PS_UUID: a778bdb0-e227-11e8-8a64-9764716906fe
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     balena_os_version: 2.19.0+rev1.prod
     body: |-
