--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-11-7
+    PS_UUID: 097a7cd0-e230-11e8-9696-a9d30e7e7884
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-7
     PS_UUID: a778bdb0-e227-11e8-8a64-9764716906fe
   - provision_time: 1m 7s
     image_size: 1724 Mb
