--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 4s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-23'
+    PS_UUID: d5562dd0-eebb-11e8-a9a2-c1e9faacc22b
+  - provision_time: 1m 4s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
