--- a/results.yaml
+++ b/results.yaml
@@ -30,6 +30,37 @@ results:
           undefined
     author: null
     timestamp: '2018-11-23'
+    PS_UUID: 58dac6c0-eeee-11e8-9f1e-b790e0e9d91f
+  - provision_time: 1m 6s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✖ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✖ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 7
+      - fail: 2
+
+      # Fails
+      ## Device reported hostOS version
+          ✖ Device reported hostOS version
+          undefined
+      ## Image filename format
+          ✖ Image filename format
+          undefined
+    author: null
+    timestamp: '2018-11-23'
     PS_UUID: f5df3e50-eee5-11e8-a194-7ba700fd7874
   - provision_time: 1m 7s
     image_size: 1724 Mb
