--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 6s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-23'
+    PS_UUID: 3df0c210-ef2f-11e8-9fdf-c30751ebe92f
+  - provision_time: 1m 6s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
