--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-11-23'
+    PS_UUID: 1a4add30-ef31-11e8-9d2a-ad8e35674997
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-23'
     PS_UUID: d0b0cff0-ef2f-11e8-9431-2bba6b83f07b
   - body: |-
       # Tests 
