--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,26 @@
 results:
   -
+    provision_time: 1m 7s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
     body: |-
+      # Tests 
+       - ✖ Image filename format
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Image filename format
+          ✖ Image filename format
+          undefined
+    author: null
+    timestamp: '2018-11-23'
+    PS_UUID: 9d278f70-ef39-11e8-aff9-156ac51b60bb
+  - body: |-
       # Tests 
 
 
