--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,26 @@
 results:
   -
-    provision_time: 1m 7s
+    provision_time: 1m 6s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✖ Image filename format
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Image filename format
+          ✖ Image filename format
+          undefined
+    author: null
+    timestamp: '2018-11-23'
+    PS_UUID: b90ae240-ef3a-11e8-a01d-df71a8768d15
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
