--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-11-24'
+    PS_UUID: c4234dd0-f02e-11e8-bae2-116890083bba
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-24'
     PS_UUID: d56f2f90-f025-11e8-a34a-1bd4e163e6c0
   - provision_time: 1m 7s
     image_size: 1724 Mb
