--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-11-24'
+    PS_UUID: 8ec83ae0-f035-11e8-a2f9-3da8537d763c
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-24'
     PS_UUID: c4234dd0-f02e-11e8-bae2-116890083bba
   - body: |-
       # Tests 
