--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,40 @@
 results:
   -
+    provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
     body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✖ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✖ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✖ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 6
+      - fail: 3
+
+      # Fails
+      ## Device reported hostOS version
+          ✖ Device reported hostOS version
+          undefined
+      ## Image filename format
+          ✖ Image filename format
+          undefined
+      ## Reload supervisor on a running device
+          ✖ Reload supervisor on a running device
+          undefined
+    author: null
+    timestamp: '2018-11-26'
+    PS_UUID: 0a548980-f120-11e8-8b4c-73babbd2757f
+  - body: |-
       # Tests 
 
 
