--- a/results.yaml
+++ b/results.yaml
@@ -33,6 +33,40 @@ results:
           undefined
     author: null
     timestamp: '2018-11-26'
+    PS_UUID: d4b9e7a0-f149-11e8-afd0-1ba9ae084a9b
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✖ Device reported hostOS version
+       - ✖ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✖ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 6
+      - fail: 3
+
+      # Fails
+      ## Device reported hostOS version
+          ✖ Device reported hostOS version
+          undefined
+      ## Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+          ✖ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+          undefined
+      ## Image filename format
+          ✖ Image filename format
+          undefined
+    author: null
+    timestamp: '2018-11-26'
     PS_UUID: 743eef90-f141-11e8-b981-dbca48e53925
   - provision_time: 1m 6s
     image_size: 1724 Mb
