--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 0m 37s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-26'
+    PS_UUID: 421b3810-f183-11e8-a240-e313dfdd8ab6
+  - provision_time: 0m 37s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
