--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    body: >-
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-26'
+    PS_UUID: 588a4e40-f18a-11e8-8a72-67536bfd7aef
+  - body: >-
       # Tests 
        - ✔ Device is online
        - ✔ Add a device environment variable
