--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 10s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-26'
+    PS_UUID: 4b4ec2a0-f1a9-11e8-9086-6ff4bb039f5b
+  - provision_time: 1m 10s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
