--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 8s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-26'
+    PS_UUID: 15fe2540-f1d7-11e8-81ca-8150f999d359
+  - provision_time: 1m 8s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
